infra/kubernetes/apserver.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apserver
  labels:
    app: apserver
spec:
  containers:
    - image: 280233053143.dkr.ecr.ap-northeast-1.amazonaws.com/apserver:latest
      name: apserver
      livenessProbe:
        exec:
          command: ["/grpc_health_probe", "-addr=:8080"]
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
      readinessProbe:
        exec:
          command: ["/grpc_health_probe", "-addr=:8080"]
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: apserver
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: apserver
  type: NodePort
